FIX : Updated NavBar color combination for better visibility

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -10,7 +10,7 @@ nav{
   border-radius: 3rem;
   gap: 0.8rem;
   display: flex;
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(3px);
 }
 
 nav a{
@@ -27,6 +27,6 @@ nav a:hover{
 }
 
 nav a.active{
-  background: var(--color-bg);
+  background: var(--color-primary);
   color: var(--color-white);
 }
